--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "trip-planner",
+  "name": "your-project-name",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "groq": "^3.55.0",
-    "groq-sdk": "^0.5.0",
+    "express": "^4.18.2",
+    "groq-sdk": "^0.3.0",
     "leaflet": "^1.9.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-scripts": "^3.0.1",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
