--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "^4.18.2",
     "groq-sdk": "^0.3.0",
     "leaflet": "^1.9.4",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
